@@ -32,7 +32,7 @@
 	<dependency>
 	  <groupId>com.github.TownyAdvanced</groupId>
 	  <artifactId>Towny</artifactId>
-	  <version>0.96.5.11</version>
+	  <version>0.96.5.12</version>
 	  <scope>provided</scope>
 	</dependency>
     <dependency>
