@@ -23,7 +23,7 @@ public class SiegeWar extends JavaPlugin {
 	
 	private static SiegeWar plugin;
 	public static String prefix = "[SiegeWar] ";
-	private static Version requiredTownyVersion = Version.fromString("0.96.5.11");
+	private static Version requiredTownyVersion = Version.fromString("0.96.5.12");
 	
 	public static SiegeWar getSiegeWar() {
 		return plugin;
