@@ -3,3 +3,5 @@
 0.0.2:
   - New Command: /swa reload - reloads the config and language file.
   - New Permission: siegewar.command.siegewaradmin.reload - a child node of siegewar.command.siegewaradmin.*
+  - Minimum Towny version bumped to 0.96.5.12.
+  - Uses TownUnconquerEvent to prevent Towny de-occupying towns.
